Projeto - Refatoracao do codigo